# ipd-simulator-rust

./: index.html  test.html
css/: styles.css
ipd-simulator-rust/: CODE_REVIEW.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  VIDEO_IMPLEMENTATION_NOTES.md  algorithm.md  performance_comparison.md
ipd-simulator-rust/src/: agent.rs  csv_export.rs  grid.rs  main.rs  video.rs
js/: grid-copy.js
