[package]
name = "ipd_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Parallel processing
rayon = "1.8"
crossbeam = "0.8"

# Data structures
bitvec = "1.0"
rustc-hash = "1.1"  # Faster hasher than default
lru = "0.12"

# Random number generation
rand = "0.8"
rand_xoshiro = "0.6"  # Fast RNG

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Image generation for video frames
image = { version = "0.24", optional = true }

# CPU detection for thread count
num_cpus = "1.16"

# Command line interface
clap = { version = "4.4", features = ["derive"] }

# Logging and progress
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"

# Performance monitoring
sysinfo = "0.30"

# Math utilities
nalgebra = "0.32"
num-traits = "0.2"

# Memory mapping for large files
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
default = []
video = ["image"]

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
